2003-05-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove CC_CFLAGS_DEBUG_V.
	CC_CFLAGS_DEFAULT (obsolete).

2003-05-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove CC_CFLAGS_PROFILE_V.
	Remove CC_LDFLAGS_PROFILE_V.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2002-11-14	Joel Sherrill <joel@OARcorp.com>

	* sp02/sp02.scn, sp15/sp15.scn, sp16/sp16.scn, sp20/sp20.scn,
	sp22/sp22.scn, sp23/sp23.scn, sp25/sp25.scn, sp31/sp31.scn: Per PR239
	update the IDs in the screens.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-09-14	Joel Sherrill <joel@OARcorp.com>

	* sp32/.cvsignore: New file.

2002-09-14	Aaron J. Grier <aaron@frye.com>

	* PR271 was not applicable against the current source but included
	a nice test that Joel decided to add to the tree as sp32.
	* sp32/Makefile.am, sp32/init.c, sp32/sp32.scn: New file.
	* Makefile.am, configure.ac: Modified to reflect addition.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* sp01/Makefile.am: Use $(OBJEXT) instead of .o.
	* sp02/Makefile.am: Use $(OBJEXT) instead of .o.
	* sp03/Makefile.am: Use $(OBJEXT) instead of .o.
	* sp04/Makefile.am: Use $(OBJEXT) instead of .o.
	* sp05/Makefile.am: Use $(OBJEXT) instead of .o.
	* sp06/Makefile.am: Use $(OBJEXT) instead of .o.
	* sp07/Makefile.am: Use $(OBJEXT) instead of .o.
	* sp08/Makefile.am: Use $(OBJEXT) instead of .o.
	* sp09/Makefile.am: Use $(OBJEXT) instead of .o.
	* sp11/Makefile.am: Use $(OBJEXT) instead of .o.
	* sp12/Makefile.am: Use $(OBJEXT) instead of .o.
	* sp13/Makefile.am: Use $(OBJEXT) instead of .o.
	* sp14/Makefile.am: Use $(OBJEXT) instead of .o.
	* sp15/Makefile.am: Use $(OBJEXT) instead of .o.